# lingyuan

./: .gitignore  Cargo.toml  README.md  STATUS.md
assets/skill/: lingyuan-survivor.md
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  commands.rs  demo_bot.rs  main.rs  render.rs  replay.rs  token_store.rs
crates/server/: Cargo.toml
crates/server/migrations/: 0001_initial.sql
crates/server/src/: auth.rs  config.rs  db.rs  main.rs  persistence.rs  state.rs  tick_loop.rs
crates/server/src/routes/: act.rs  admin.rs  clock.rs  join.rs  leave.rs  mod.rs  observe.rs  world_info.rs  ws.rs
crates/server/tests/: integration.rs
crates/world/: Cargo.toml
crates/world/src/: action.rs  agent.rs  building.rs  clock.rs  combat.rs  coord.rs  creature.rs  entity.rs  event.rs  gen.rs  grid.rs  item.rs  lib.rs  observation.rs  plant.rs  recipe.rs  rng.rs  tile.rs  world.rs
crates/world/src/systems/: creature_ai.rs  death.rs  mod.rs  natural.rs  spawn.rs
docs/superpowers/plans/: 2026-05-27-m1-m2-skeleton-and-world.md  2026-05-27-m3-survival-loop.md  2026-05-27-m4-combat.md
docs/superpowers/specs/: 2026-05-27-lingyuan-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: main.ts  types.ts  ws.ts
frontend/src/hud/: style.css
frontend/src/stage/: agent-layer.ts  effects-layer.ts  entity-layer.ts  minimap.ts  sprite-cache.ts  tile-layer.ts  world-stage.ts
mcp/: README.md  lingyuan_mcp.py
mcp/tests/: test_render.py
scripts/: audit_sprites.py  batch_gen_sprites.py  demo.sh  gen_sprites.py  gen_tiles_v2.py  play.sh  post_process_sprite.py  post_process_tile.py  smoke.sh  survival-smoke.sh
