[workspace]
members = ["crates/world", "crates/server", "crates/cli"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
rand_chacha = "0.3"
noise = "0.8"
chrono = { version = "0.4", features = ["serde"] }

[profile.dev]
opt-level = 0

[profile.release]
lto = "thin"
codegen-units = 1
