[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "survivor"
path = "src/main.rs"

[dependencies]
world = { path = "../world" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "5"
