[package]
name = "server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
world = { path = "../world" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rand.workspace = true
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros", "chrono"] }
uuid = { version = "1.8", features = ["v4"] }
sha2 = "0.10"
futures-util = "0.3"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio = { version = "1.36", features = ["full", "process"] }
serde_json = "1"
